--- a/login/templates/remision.html
+++ b/login/templates/remision.html
@@ -146,7 +146,7 @@
                                 <thead>
                                     <tr>
                                         <th>Consecutivo Despacho</th>
-                                        <th>ID Solicitud</th>
+                                        <th>Consecutivo Cercafe</th>
                                         <th>Granja</th>
                                         <th>Lote</th>
                                         <th>Cerdos Despachados</th>
